Fixed z-index issues

--- a/src/Assets/Styles/index.css
+++ b/src/Assets/Styles/index.css
@@ -1701,7 +1701,7 @@ span.login-remember-me-label-text {
 
 .left-arrow, .right-arrow {
   position: absolute;
-  z-index: 1;
+  z-index: 100;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -1751,7 +1751,7 @@ span.login-remember-me-label-text {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 10;
   margin: 0 auto;
   background-color: #181818;
   color: white;
