--- a/src/Assets/Styles/sass/components-modules/_carousel.scss
+++ b/src/Assets/Styles/sass/components-modules/_carousel.scss
@@ -1,23 +1,16 @@
 
-
-
 .carousel-wrapper {
     display: flex;
     width: 100%;
     position: relative;     
 }
 
-
-
 .carousel-content {
     display: flex;
     transition: all 250ms linear;
     -ms-overflow-style: none;  
     scrollbar-width: none;  
-   
-
 }
-
 
 .carousel-content::-webkit-scrollbar, .carousel-content::-webkit-scrollbar {
     display: none;
@@ -37,7 +30,7 @@
 
 .left-arrow, .right-arrow {
     position: absolute;
-    z-index: 1;
+    z-index: 100;
     top: 50%;
     transform: translateY(-50%);
     width: 48px;
