--- a/src/Assets/Styles/sass/components-modules/_movie_card.scss
+++ b/src/Assets/Styles/sass/components-modules/_movie_card.scss
@@ -12,7 +12,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 10;
   margin: 0 auto;
   background-color: $background-color-alt;
   color: white;
